add_executable(leetcode_ut 
    tests/hello_test.cpp
    tests/valid_parentheses.cpp
    tests/partition_array_three_parts_equal_sum.cpp
    tests/insert_gcd_linked_list.cpp
    tests/keep_city_skyline.cpp
    tests/move_all_balls_each_box.cpp
    tests/minimum_operations_to_make_array_equal.cpp
    tests/maximum_score_words_created_by_letters.cpp
    tests/unique_paths_3.cpp
    tests/build_matrix_with_conditions.cpp
    tests/reducing_dishes.cpp
    tests/recover_tree_from_preorder.cpp
    tests/n_queens_II.cpp
    tests/submatrices_that_sum_target.cpp
    tests/minimum_flips_to_make_zero_matrix.cpp
    tests/cherry_pickup_II.cpp
    tests/my_calendar_III.cpp
    tests/earliest_day_bloom.cpp
    tests/minimum_increment_subarrays.cpp
    tests/minimum_insertion_to_palindrome.cpp
    tests/n_queens.cpp
    tests/online_stock_span.cpp
    tests/filling_bookcase_shelves.cpp
    tests/grid_can_be_cut_into_sections.cpp
    tests/string_from_binary_tree.cpp
    tests/find_champion_2.cpp
    tests/search_suggestion_system.cpp
)
target_include_directories(leetcode_ut PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/include
)
target_link_libraries(
    leetcode_ut
    GTest::gtest_main
)

include(GoogleTest)
gtest_discover_tests(leetcode_ut)